--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "log-symbols": "^4.0.0",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "sequelize": "^4.41.2"
   }
 }
