--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-handlebars": "^5.2.0",
