--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
+    "faker": "^5.1.0",
     "fs": "0.0.1-security",
     "log-symbols": "^4.0.0",
     "mysql2": "^1.6.4",
