--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.1",
     "fs": "0.0.1-security",
     "log-symbols": "^4.0.0",
+    "moment": "^2.29.1",
     "mysql2": "^1.6.4",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
