--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "log-symbols": "^4.0.0",
     "moment": "^2.29.1",
     "mysql2": "^1.7.0",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
